# cmake_project_structure

./: .gitignore  CMakeLists.txt  README.md
applications/: CMakeLists.txt
executables/application1/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/layer1/library1/: CMakeLists.txt
scripts/: build_debug.sh  build_release.sh
